<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="18dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/block_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/block_header"
                android:textColor="@color/swamp_green"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/block_description"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:text="@string/block_button_text"
                android:textAllCaps="false" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>